# revisum-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  sversion.py  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 01_foo.sql  02_foo.sql  03_foo.sql
src-tauri/src/: filesystem.rs  lib.rs  main.rs
src-tauri/src/command/: content_command.rs  discipline_command.rs  mod.rs  review_command.rs  study_item_command.rs  user_command.rs
src-tauri/src/db/: config.rs  db_methods.rs  migration.rs  mod.rs
src-tauri/src/error/: app_error.rs
src-tauri/src/migrations/: V2_create_discipline_review.sql
src-tauri/src/model/: card.rs  content.rs  discipline.rs  discursive_response.rs  mod.rs  objective_answer.rs  question.rs  reviewlog.rs  session.rs  studyitem.rs  user.rs  user_status.rs
src-tauri/src/repository/: base_repository.rs  card_repository.rs  content.rs  content_repository.rs  discipline_repository.rs  discursive_response_repository.rs  mod.rs  objective_answer_repository.rs  question_repository.rs  reviewlog_repository.rs  session_repository.rs  studyi_item_repository.rs  user_repository.rs  user_status_repository.rs
src-tauri/src/service/: content_service.rs  discipline_service.rs  mod.rs  review_service.rs  service_factory.rs  study_item_service.rs  user_service.rs
src-tauri/src/service/dto/: card_response.rs  content_response.rs  discipline_response.rs  discursive_response_response.rs  message_response.rs  mod.rs  question_response.rs  (+3 more)
src-tauri/src/utils/: datetime.rs
(+140 files in other folders)
