[package]
name = "revisum"
version = "0.3.0"
description = "A Tauri App"
authors = ["Vinicius"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "revisum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tauri-plugin-store = "2"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
tauri-plugin-fs = "2"
